--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,12 +1,14 @@
 {
   "type": "postgres",
-  "host": "pgsql01-farm76.kinghost.net",
+  "host": "localhost",
   "port": 5432,
-  "username": "unibrasilfactory",
-  "password": "cheque123",
+  "username": "postgres",
+  "password": "admin",
   "database": "cheque",
   "entities": [
-    "./src/models/*.ts"
+    "./dist/models/*{.ts,.js}",
+    "./src/models/*{.ts,.js}",
+    "./models/*{.ts,.js}"
   ],
   "migrations": [
     "./src/database/migrations/*.ts"
@@ -16,3 +18,4 @@
   },
   "logging": true
 }
+
