--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts",
-    "start": "ts-node src/server.ts",
+    "dev:server": "ts-node-dev --transpileOnly --ignore-watch node_modules src/index.ts",
+    "start": "node index.js",
+    "startDev": "ts-node src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.6.2",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.1.0"
   },
