--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
       }
     ],
     "camelcase": "off",
+    "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/no-unused-vars": ["error", {
       "argsIgnorePattern": "_"
     }]
